Fixed a bunch of issues
Completed the project

--- a/public/signin.html
+++ b/public/signin.html
@@ -34,8 +34,7 @@
             autocomplete="on" />
           <div class="error-message" style="color: red; display: none"></div>
           <!-- <input type="password" placeholder="Confirm password" /> -->
-
-          <button class="getStarted" type="submit">Get Started</button>
+          <button class="getStarted" type="submit">SIGN IN</button>
           <div class="signin">
             Don't have an account?
             <a class="signinanchor" href="signup">Sign up </a>
