--- a/public/signup.html
+++ b/public/signup.html
@@ -34,7 +34,7 @@
             placeholder="Confirm password" />
           <div class="error-message" style="color: red; display: none"></div>
 
-          <button class="getStarted" type="submit">Get Started</button>
+          <button class="getStarted" type="submit">SIGN UP</button>
           <div class="signin">
             Have an account?
             <a class="signinanchor" href="signin">Sign in </a>
